--- a/src/main/resources/org/jvmlthread/javamultithreading/MainWindowView.fxml
+++ b/src/main/resources/org/jvmlthread/javamultithreading/MainWindowView.fxml
@@ -16,16 +16,19 @@
             <Pane fx:id="Pane2" prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="StartButton" layoutX="14.0" layoutY="26.0" mnemonicParsing="false" onAction="#OnStartButtonClick" prefHeight="24.0" prefWidth="86.0" text="Start" />
-                  <Button fx:id="Shoot" layoutX="108.0" layoutY="26.0" mnemonicParsing="false" onAction="#onShootbtnClick" prefHeight="24.0" prefWidth="97.0" text="Shoot" />
-                  <Button fx:id="pauseButton" layoutX="216.0" layoutY="26.0" mnemonicParsing="false" onAction="#OnPauseBtnClick" prefHeight="24.0" prefWidth="85.0" text="Pause" />
+                  <Button fx:id="Shoot" layoutX="237.0" layoutY="26.0" mnemonicParsing="false" onAction="#onShootbtnClick" prefHeight="24.0" prefWidth="127.0" text="Shoot" />
+                  <Button fx:id="pauseButton" layoutX="100.0" layoutY="26.0" mnemonicParsing="false" onAction="#OnPauseBtnClick" prefHeight="24.0" prefWidth="85.0" text="Pause" />
+                  <Button layoutX="454.0" layoutY="26.0" mnemonicParsing="false" onAction="#stop" prefHeight="24.0" prefWidth="124.0" text="Stop" />
                </children>
             </Pane>
          </bottom>
          <center>
-            <Pane fx:id="Pane1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#OnPane1MouseClick" prefHeight="200.0" prefWidth="448.0" BorderPane.alignment="CENTER">
+            <Pane fx:id="Pane1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="448.0" BorderPane.alignment="CENTER">
                <children>
-                  <Circle fx:id="target1" fill="DODGERBLUE" layoutX="224.0" layoutY="27.0" radius="27.0" stroke="BLACK" strokeType="INSIDE" />
-                  <Circle fx:id="target2" fill="#e6ff1f" layoutX="395.0" layoutY="27.0" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="target1" fill="#1f8000" layoutX="224.0" layoutY="35.0" radius="27.0" stroke="#4e8006"
+                          strokeType="INSIDE" />
+                  <Circle fx:id="target2" fill="#e6ff1f" layoutX="395.0" layoutY="31.0" radius="17.0" stroke="#7f8007"
+                          strokeType="INSIDE" />
                </children>
             </Pane>
          </center>
