--- a/src/main/resources/org/jvmlthread/javamultithreading/player-stats-view.fxml
+++ b/src/main/resources/org/jvmlthread/javamultithreading/player-stats-view.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="box" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane>
+<VBox fx:id="box" stylesheets="@dark-theme.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <GridPane alignment="CENTER" gridLinesVisible="true" stylesheets="@dark-theme.css">
         <columnConstraints>
             <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -16,32 +16,32 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <children>
-            <Label text="Игрок:" GridPane.halignment="RIGHT">
+            <Label stylesheets="@dark-theme.css" text="Игрок:" GridPane.halignment="RIGHT">
                 <GridPane.margin>
                     <Insets right="8.0" />
                 </GridPane.margin>
             </Label>
-            <Label text="Счёт:" GridPane.rowIndex="1">
+            <Label stylesheets="@dark-theme.css" text="Счёт:" GridPane.rowIndex="1">
                 <GridPane.margin>
                     <Insets right="8.0" />
                 </GridPane.margin>
             </Label>
-            <Label layoutX="10.0" layoutY="46.0" text="Выстрелы:" GridPane.rowIndex="2">
+            <Label layoutX="10.0" layoutY="46.0" stylesheets="@dark-theme.css" text="Выстрелы:" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets right="8.0" />
                 </GridPane.margin>
             </Label>
-            <Label fx:id="playerNameLabel" text="Label" GridPane.columnIndex="1">
+            <Label fx:id="playerNameLabel" stylesheets="@dark-theme.css" text="Label" GridPane.columnIndex="1">
                 <GridPane.margin>
                     <Insets left="8.0" />
                 </GridPane.margin>
             </Label>
-            <Label fx:id="playerScoreLabel" layoutX="118.0" layoutY="16.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Label fx:id="playerScoreLabel" layoutX="118.0" layoutY="16.0" stylesheets="@dark-theme.css" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <GridPane.margin>
                     <Insets left="8.0" />
                 </GridPane.margin>
             </Label>
-            <Label fx:id="playerShotsLabel" layoutX="77.0" layoutY="16.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Label fx:id="playerShotsLabel" layoutX="77.0" layoutY="16.0" stylesheets="@dark-theme.css" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets left="8.0" />
                 </GridPane.margin>
